--- a/gb/20/4/16/n12037650.md
+++ b/gb/20/4/16/n12037650.md
@@ -1,20 +1,20 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yu2306/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yu2306/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/yu2306/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yu2306/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/yu2306/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yu2306/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/yu2306/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yu2306/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/yu2306/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yu2306/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/yu2306/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yu2306/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/yu2306/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yu2306/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/yu2306/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yu2306/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/yu2306/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/yu2306/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yu2306/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yu2306/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yu2306/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yu2306/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>美太空军首次任务 发射先进极高频通讯卫星</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/04/Tu1_AEHF-AF-600x400.jpg" />
 <h6>美国太空军近日执行首次任务，把一颗先进极高频（AEHF）通信卫星送入轨道，完成了新一代军事通信卫星网络的部署。（Lockheed Martin）
 </h6>
 <hr>
-	<p>【大纪元2020年04月7日讯】（大纪元记者李自强综合报导）美国<ahref="https://github.com/yu2306/djy/blob/master/gb/tag/%E5%A4%AA%E7%A9%BA%E5%86%9B.md#1">太空军</a>成军之后，近日第一次执行任务，把一颗超安全<ahref="https://github.com/yu2306/djy/blob/master/gb/tag/%E5%86%9B%E4%BA%8B%E9%80%9A%E8%AE%AF%E5%8D%AB%E6%98%9F.md#1">军事通讯卫星</a>送入轨道，完成了新一代军事通信卫星网络的部署。这种“先进极高频”（AEHF）通信卫星群，能为地面、海上与空中平台提供全球性、可存续性与受保护的通讯能力，更能在各种冲突中，确保军队通讯线路存续。此外，加密功能让其不易遭拦截、侦测，而防干扰则可避免核武器带来的电磁干扰，数据传输速度更是10倍于上一代。</p>
-<p>据法新社报导，美国<ahref="https://github.com/yu2306/djy/blob/master/gb/tag/%E6%B4%9B%E5%85%8B%E5%B8%8C%E5%BE%B7%C2%B7%E9%A9%AC%E4%B8%81.md#1">洛克希德·马丁</a>公司（Lockheed Martin）的“先进极高频”（AEHF）通信卫星，于当地时间3月26日下午4时18分在佛罗里达州的卡纳维尔角（Cape Canaveral）由“擎天神5号”（Atlas V）火箭搭载发射升空，并于第二天送入预定地球同步轨道。</p>
+	<p>【大纪元2020年04月7日讯】（大纪元记者李自强综合报导）美国<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%A4%AA%E7%A9%BA%E5%86%9B.md#1">太空军</a>成军之后，近日第一次执行任务，把一颗超安全<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%86%9B%E4%BA%8B%E9%80%9A%E8%AE%AF%E5%8D%AB%E6%98%9F.md#1">军事通讯卫星</a>送入轨道，完成了新一代军事通信卫星网络的部署。这种“先进极高频”（AEHF）通信卫星群，能为地面、海上与空中平台提供全球性、可存续性与受保护的通讯能力，更能在各种冲突中，确保军队通讯线路存续。此外，加密功能让其不易遭拦截、侦测，而防干扰则可避免核武器带来的电磁干扰，数据传输速度更是10倍于上一代。</p>
+<p>据法新社报导，美国<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%B4%9B%E5%85%8B%E5%B8%8C%E5%BE%B7%C2%B7%E9%A9%AC%E4%B8%81.md#1">洛克希德·马丁</a>公司（Lockheed Martin）的“先进极高频”（AEHF）通信卫星，于当地时间3月26日下午4时18分在佛罗里达州的卡纳维尔角（Cape Canaveral）由“擎天神5号”（Atlas V）火箭搭载发射升空，并于第二天送入预定地球同步轨道。</p>
 <p>这颗名为“AEHF6”的通信卫星，是洛克希德马丁公司先进极高频卫星系列中的第6颗，也是最后一颗。洛马公司表示，此一卫星群为“在地面、海上和空中平台的战略需求及作战人员提供全球性、可存续、受保护的通讯能力”。</p>
-<p>另1枚将送上太空的卫星，则是代号为“TDO-2”的太空态势感测卫星，其能透过光学校准与雷射测距等功能强化现有太空态势觉知，也是美国<ahref="https://github.com/yu2306/djy/blob/master/gb/tag/%E5%A4%AA%E7%A9%BA%E5%86%9B.md#1">太空军</a>强化太空监侦能力的最新动作。美国空军去年8月也是利用擎天神5号火箭，将TDO-1与AEHF5送上轨道。</p>
+<p>另1枚将送上太空的卫星，则是代号为“TDO-2”的太空态势感测卫星，其能透过光学校准与雷射测距等功能强化现有太空态势觉知，也是美国<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%A4%AA%E7%A9%BA%E5%86%9B.md#1">太空军</a>强化太空监侦能力的最新动作。美国空军去年8月也是利用擎天神5号火箭，将TDO-1与AEHF5送上轨道。</p>
 <p>现在，军用通信卫星在战争中的作用越来越大，已被誉为现代战争的生命线，因为战场上70%以上的通信是靠军用通信卫星来完成的。它使信息迅速、安全、灵活的传输，实现全球无缝覆盖，从根本上改变了现代军事作战的方式。至今，美国、俄罗斯、英国、意大利、德国、欧洲和中国等均拥有军用通信卫星，其中以美国的军用通信卫星阵容最为整齐、技术最为先进。<br />
-<figure id="attachment_12037655" style="width: 300px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/04/Tu2_roll1.jpeg"><img src="https://i.epochtimes.com/assets/uploads/2020/04/Tu2_roll1-300x400.jpeg" alt="" width="300" b="400" class="size-small wp-image-12037655" /></a><figcaption class="wp-caption-text">AEHF6通信卫星是用擎天神5号火箭发射升空的。（ULA）</figcaption></figure></p>
+<figure id="attachment_12037655" aria-describedby="caption-attachment-12037655" style="width: 300px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/04/Tu2_roll1.jpeg"><img src="https://i.epochtimes.com/assets/uploads/2020/04/Tu2_roll1-300x400.jpeg" alt="" width="300" b="400" class="size-small wp-image-12037655" /></a><figcaption id="caption-attachment-12037655" class="wp-caption-text">AEHF6通信卫星是用擎天神5号火箭发射升空的。（ULA）</figcaption></figure></p>
 <h2>AEHF卫星数据传输快 抗干扰能力强</h2>
 <p>美国军用通信卫星可分为宽带、受保护和窄带三类。宽带系统强调大容量；受保护系统着重抗干扰特性、保密性及核生存能力；窄带系统则重点支持需要语音或低数据速率通信的用户，以及移动用户和小型终端的用户。</p>
-<p>AEHF卫星是受保护系统的最新成员，由<ahref="https://github.com/yu2306/djy/blob/master/gb/tag/%E6%B4%9B%E5%85%8B%E5%B8%8C%E5%BE%B7%C2%B7%E9%A9%AC%E4%B8%81.md#1">洛克希德·马丁</a>公司研制，为战略指挥和战术作战人员提供了全球生存和通信抗干扰能力。美国盟友加拿大、荷兰、英国和澳大利亚等也可使用该系统的服务。</p>
+<p>AEHF卫星是受保护系统的最新成员，由<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%B4%9B%E5%85%8B%E5%B8%8C%E5%BE%B7%C2%B7%E9%A9%AC%E4%B8%81.md#1">洛克希德·马丁</a>公司研制，为战略指挥和战术作战人员提供了全球生存和通信抗干扰能力。美国盟友加拿大、荷兰、英国和澳大利亚等也可使用该系统的服务。</p>
 <p>洛克希德马丁公司表示，AEHF卫星群系统具有加密功能，被拦截及侦测的可能性低，防干扰，还能穿透核武器造成的电磁干扰。</p>
 <p>AEHF卫星采用A2100M平台，通信容量达430兆比特/秒，10倍于上一代的“军事星2”（Milstar-2）卫星，能同时支持6,000台用户终端，而Milstar-2只能服务1,500个；采用跳频和相控阵天线技术，实现抗干扰能力。</p>
 <p>具体来说，Milstar-1传输“战斧”巡航导弹的任务命令需要100秒，传输1.1兆大小的空中任务命令需要1.02小时，传输1幅侦察卫星拍摄的可见光图像（24兆）需要22.2小时，Milstar-2传输上述数据分别只需花费0.16秒、5.7秒和2.07分钟，而AEHF也只需0.03秒、1.07秒、23.6秒。</p>
@@ -33,36 +33,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/19/10/25/n11611319.md#1">【内幕】星战计划重演？中美太空争霸（上）</a></li>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/19/10/25/n11611405.md#1">星战计划重演？中美太空争霸（中）</a></li>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/19/10/25/n11611459.md#1">星战计划重演？中美太空争霸（下）</a></li>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/19/12/21/n11736778.md#1">川普签署国防授权法 7380亿国防预算创纪录</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/10/25/n11611319.md#1">【内幕】星战计划重演？中美太空争霸（上）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/10/25/n11611405.md#1">星战计划重演？中美太空争霸（中）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/10/25/n11611459.md#1">星战计划重演？中美太空争霸（下）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/12/21/n11736778.md#1">川普签署国防授权法 7380亿国防预算创纪录</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/24/n10082527.md#1" target="_blank">谢泳：叶企孙饶毓泰的死</a></li><li><a href="https://github.com/yu2306/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/12/24/n4042174.md#1" target="_blank">大陆民间这些惊人预言都指向同一件大事</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/28/n11903759.md#1" target="_blank">朱镕基发言3分钟被打成右派20年</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/8/n10699044.md#1" target="_blank">美国女学者修炼奇缘(上) 脱胎换骨的改变</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/20/5/13/n12106565.md#1">【内幕】环时打脸刘鹤 党内分歧公开化</a></li>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/20/5/13/n12106234.md#1">【有冇搞错】中共网路封锁即将崩溃</a></li>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/20/5/14/n12108396.md#1">中研院薪水比卸任副元首礼遇金高？陈建仁回应</a></li>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/20/5/13/n12106258.md#1">有意入籍台湾遭黄安攻击 黄秋生一句话爆呛</a></li>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/20/5/13/n12105610.md#1">坚持对台军售 法国呛中共：精力用错了地方</a></li>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/20/5/12/n12103240.md#1">传因疫情不想白发工资 文咏珊辞退十年老助理</a></li>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/20/5/12/n12103485.md#1">赵薇丈夫黄有龙遭追债 香港名媛爆周五是期限</a></li>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/20/5/12/n12102973.md#1">直呼台湾空气新鲜 传黄秋生有意入籍台湾</a></li>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/20/5/13/n12104686.md#1">总统亲上节目受访 唐绮阳见小英惊呼：像做梦</a></li>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/20/5/13/n12106548.md#1">疫情下戴口罩产子 日女星用力过度致尾椎骨折</a></li>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/20/5/10/n12097175.md#1">天才预言家珍妮  2020年大决战预言</a></li>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/20/5/12/n12102655.md#1">修道人半途而废 入红尘数年后惊见道友功成</a></li>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/16/9/28/n8345456.md#1">秤砣一击 寇准幡然悔悟</a></li>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/20/5/10/n12097328.md#1">【历史上的瘟疫】大清退位前夕的东北鼠疫</a></li>
-<li><a href="https://github.com/yu2306/djy/blob/master/gb/20/3/14/n11939927.md#1">善能量超时空 几年后扭转“要命”时刻</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11946346.md#1">【现场视频】听信中共谎言 返京人挤爆机场</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11945722.md#1">【翻墙必看】官媒反常 批赵立坚“下作”？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测中共病毒</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yu2306/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yu2306/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/4/16/n12037650.htm">美太空军首次任务 发射先进极高频通讯卫星</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/4/16/n12037650.htm">美太空军首次任务 发射先进极高频通讯卫星</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/yu2306/djy/blob/master/gb/20/4/16/n12037650.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yu2306/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yu2306/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yu2306/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yu2306/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yu2306/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/20/4/16/n12037650.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
