--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/16/n10147874.md#1" target="_blank">“一打三反”运动：文革中血腥的一幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/8/n11098363.md#1" target="_blank">美国际宗教自由大使访港 促停止迫害法轮功</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/11/n11180153.md#1" target="_blank">【征文】章阁：中国古代专制吗（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/8/n11308403.md#1" target="_blank">我的父亲</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
