--- a/gb/22/5/17/n13739350.md
+++ b/gb/22/5/17/n13739350.md
@@ -167,7 +167,7 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ychojm359/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/11/n11180153.md#1" target="_blank">【征文】章阁：中国古代专制吗（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/8/n11308403.md#1" target="_blank">我的父亲</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/1/n11559430.md#1" target="_blank">林辉： 中共70年来的成功与未遂政变</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/1/n10683927.md#1" target="_blank">一位中国乡下老师 获美国参众两院关注</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
